# demos

./: README.md
cmake_demo/proj/cmake/tools/Platform/: xilinx.cmake
cmake_demo/proj/cmake/tools/toolchain/: cortex-a9.cmake  xilinx.cmake
cmake_demo/proj/sdk/: .cproject  .project  CMakeLists.txt  run_cmake.bat  run_cmake_gui.bat  start_ide.bat  version.h.in
cmake_demo/proj/sdk/brd/: katbot.hdf  lscript.ld
cmake_demo/proj/sdk/cmake/: armC9PostAction.cmake  xilinx.cmake
cmake_demo/proj/sdk/scripts/: build_bsp.tcl  config.tcl  create_sdk_workspace.tcl  sdk_config.tcl
cmake_demo/proj/sdk/src/: CMakeLists.txt
cmake_demo/proj/sdk/src/app/: .cproject  .project  CMakeLists.txt
cmake_demo/proj/sdk/src/app/src/: helloworld.c
